@@ -38,6 +38,7 @@ import java.util.stream.Collectors;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -332,7 +333,7 @@ class GlobalSearchQueryBuilderTest {
             assertEquals(expectedTerms.size(), actualTerms.size());
             // NB: terms searches use: 'lowercase_normalizer'
             List<String> expectedTermsLowerCase
-                = expectedTerms.stream().map(String::toLowerCase).collect(Collectors.toList());
+                = expectedTerms.stream().map(String::toLowerCase).toList();
             assertTrue(actualTerms.containsAll(expectedTermsLowerCase));
         }
 
@@ -405,7 +406,7 @@ class GlobalSearchQueryBuilderTest {
 
         private BoolQueryBuilder toBoolQueryBuilder(QueryBuilder output) {
             assertNotNull(output);
-            assertTrue(output instanceof BoolQueryBuilder);
+            assertInstanceOf(BoolQueryBuilder.class, output);
             return (BoolQueryBuilder) output;
         }
 
@@ -420,7 +421,7 @@ class GlobalSearchQueryBuilderTest {
 
                     // if contains a should: check if Nested
                     if (CollectionUtils.isNotEmpty(shouldQueries)) {
-                        QueryBuilder firstShouldQuery = shouldQueries.get(0);
+                        QueryBuilder firstShouldQuery = shouldQueries.getFirst();
                         if (firstShouldQuery instanceof NestedQueryBuilder) {
                             if (nestedPath.equalsIgnoreCase(getNestedQueriesPathValue(firstShouldQuery))) {
                                 return shouldQueries;
@@ -653,7 +654,7 @@ class GlobalSearchQueryBuilderTest {
                 () -> assertSortCriteria(
                     GlobalSearchSortByCategory.CASE_NAME,
                     SortOrder.ASC,
-                    output.get(0)
+                    output.getFirst()
                 ),
                 () -> assertSortCriteria(
                     GlobalSearchSortByCategory.CASE_MANAGEMENT_CATEGORY_NAME,
